corrected form margins on mobile devices

--- a/index.css
+++ b/index.css
@@ -269,8 +269,9 @@ footer {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 200px;
     }
-    
+
     form input[type="text"],
     form input[type="email"],
     form textarea {
